log
Wed, Apr 16, 2025  8:59:06 AM: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair*)calloc(capacity,sizeof(Pair*));
                  ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:59:42 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d3b9bd1
Wed, Apr 16, 2025  9:39:31 AM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
0bba591
Wed, Apr 16, 2025  9:44:10 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7bca441
Wed, Apr 16, 2025  9:57:56 AM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:5: error: 'pos' undeclared (first use in this function)
     pos = hash(key,map->capacity);
     ^~~
hashmap.c:102:5: note: each undeclared identifier is reported only once for each function it appears in
a6afe6a
Wed, Apr 16, 2025  9:58:08 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
953633c
Wed, Apr 16, 2025 10:01:26 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|0
   [ INFO ] buscando elemento con key=key
b48b230
Wed, Apr 16, 2025 10:05:38 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
e777a00
Wed, Apr 16, 2025 10:14:34 AM: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:89:13: error: 'size' undeclared (first use in this function)
             size--;
             ^~~~
hashmap.c:89:13: note: each undeclared identifier is reported only once for each function it appears in
92c8b93
Wed, Apr 16, 2025 10:14:54 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
   [ INFO ] se elimina dato con key=olla
26e06f5
Wed, Apr 16, 2025 10:15:41 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
   [ INFO ] se intenta eliminar el mismo dato
a977eb1
